# sdl_curobo

./: .gitignore  .gitmodules  README.md  pyproject.toml
scripts/: cube_stacking.py  cutamp_test.py  pick_and_place.py
scripts/cutamp_test/: action_graph.py  isaacsim_env.py  isaacsim_gr00t.py
scripts/test/: constrained_reacher.py  cutamp_test.py  run_cutamp.py
scripts/test/isaacsim/: env.py  tamp.py  task.py
src/sdl/content/assets/robot/dcp_description/urdf/: fr5_ag95_temp.usd
src/sdl/content/configs/robot/: fr5.yml  fr5_ag95.yml
src/sdl/controllers/: __init__.py  cube_stack_controller.py  pick_place_controller.py
src/sdl/tasks/: cube_stack.py  pick_place.py
src/sdl/tasks/base/: cube_stack.py  pick_place.py
src/sdl/utils/: helper.py  util_file.py
