[build-system]
requires = ["setuptools", "toml", "wheel", "ninja"]
build-backend = "setuptools.build_meta"

[project]
name = "sdl_cutamp"
version = "0.0.1"
description = "sdl_cutamp"
readme = "README.md"
requires-python = ">=3.11"
keywords = ["robotics", "SDL"]
authors = []
classifiers = [
    "Programming Language :: Python :: 3",
]

[tool.setuptools]
package-dir = {"sdl" = "src/sdl", "cutamp" = "src/cuTAMP/cutamp"}
packages = ["sdl"]